test/libsolidity/syntaxTests/abiEncoder/same_setting_twice.sol
pragma experimental ABIEncoderV2;
pragma abicoder v2;
// ----
// SyntaxError 3845: (34-53): ABI coder has already been selected for this source unit.
